--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -6,14 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Main">
+    tools:context="com.example.kaleb_000.dartdojo.Solitaire">
 
-    <Button
+    <TextView
+        android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/send_to_solitaire"
-        android:id="@+id/send_to_solitaire"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="send_to_solitaire"/>
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
