--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -37,7 +37,8 @@
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
-        android:layout_gravity="right|center" />
+        android:layout_gravity="right|center"
+        android:onClick="dart_pressed" />
 
     <TextView
         android:layout_width="wrap_content"
