--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -7,40 +7,41 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kaleb_000.dartdojo.Solitaire"
-    android:id="@+id/SolitaireLayout">
+    android:id="@+id/SolitaireLayout"
+    android:background="#fff1fdff">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dart 1"
         android:id="@+id/button"
         android:layout_marginTop="75dp"
         android:layout_gravity="right|center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:onClick="dart_pressed" />
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dart 2"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:layout_gravity="right|center"
-        android:onClick="dart_pressed" />
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dart 3"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
         android:layout_gravity="right|center"
-        android:onClick="dart_pressed" />
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,5 +51,6 @@
         android:id="@+id/Score"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:layout_marginBottom="43dp"
+        android:textColor="#ff000000" />
 </RelativeLayout>
