--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -14,34 +14,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="66dp"
         android:layout_gravity="right|center"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:onClick="dart_pressed"
-        android:background="@drawable/dart_button" />
+        android:background="@drawable/dart_button"
+        android:layout_alignParentTop="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
         android:layout_gravity="right|center"
         android:onClick="dart_pressed"
-        android:background="@drawable/dart_button" />
+        android:background="@drawable/dart_button"
+        android:layout_alignStart="@+id/button"
+        android:layout_below="@+id/button3" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button3"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
         android:layout_gravity="right|center"
         android:onClick="dart_pressed"
-        android:background="@drawable/dart_button" />
+        android:background="@drawable/dart_button"
+        android:layout_alignStart="@+id/button2"
+        android:layout_below="@+id/button" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -51,6 +48,5 @@
         android:id="@+id/Score"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp"
         android:textColor="#ff000000" />
 </RelativeLayout>
