--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.kaleb_000.dartdojo.Solitaire"
     android:id="@+id/SolitaireLayout"
-    android:background="#fff1fdff">
+    android:background="#ff405073">
 
     <Button
         android:layout_width="wrap_content"
@@ -46,7 +46,17 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Ain't nobody been pressed yet"
         android:id="@+id/Score"
-        android:layout_alignParentBottom="true"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Score"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#ff000000" />
+        android:textColor="#ffffffff" />
 </RelativeLayout>
