--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -59,4 +59,40 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button5"
+        android:layout_gravity="right|center"
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_below="@+id/button"
+        android:visibility="invisible" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:layout_gravity="right|center"
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button"
+        android:layout_toEndOf="@+id/button"
+        android:visibility="invisible"
+        android:layout_above="@+id/button5"
+        android:layout_alignStart="@+id/button5" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button6"
+        android:layout_gravity="right|center"
+        android:onClick="dart_pressed"
+        android:background="@drawable/dart_button"
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_alignStart="@+id/button5"
+        android:visibility="invisible" />
 </RelativeLayout>
