--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -23,17 +23,17 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
+        android:id="@+id/button3"
         android:layout_gravity="right|center"
         android:onClick="dart_pressed"
         android:background="@drawable/dart_button"
-        android:layout_alignStart="@+id/button"
-        android:layout_below="@+id/button3" />
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
+        android:id="@+id/button2"
         android:layout_gravity="right|center"
         android:onClick="dart_pressed"
         android:background="@drawable/dart_button"
@@ -90,9 +90,27 @@
         android:layout_gravity="right|center"
         android:onClick="dart_pressed"
         android:background="@drawable/dart_button"
-        android:layout_alignTop="@+id/button2"
+        android:layout_alignTop="@+id/button3"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/button2"
+        android:layout_alignBottom="@+id/button3"
         android:layout_alignStart="@+id/button5"
         android:visibility="invisible" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/next_number"
+        android:layout_toEndOf="@+id/Score"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/button6" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/previous_number"
+        android:layout_alignTop="@+id/next_number"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/Score" />
 </RelativeLayout>
