--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -99,18 +99,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Next"
         android:id="@+id/next_number"
-        android:layout_toEndOf="@+id/Score"
+        android:layout_toRightOf="@+id/textView"
         android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/button6" />
+        android:layout_alignEnd="@+id/button6"
+        android:onClick="next_previous_button_pressed" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Previous"
         android:id="@+id/previous_number"
         android:layout_alignTop="@+id/next_number"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/Score" />
+        android:layout_toStartOf="@+id/textView"
+        android:onClick="next_previous_button_pressed"/>
 </RelativeLayout>
