--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -101,10 +101,11 @@
         android:layout_height="wrap_content"
         android:text="Next"
         android:id="@+id/next_number"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/button6"
-        android:onClick="next_previous_button_pressed" />
+        android:onClick="next_previous_button_pressed"
+        android:layout_below="@+id/button6"
+        android:layout_alignStart="@+id/button6"
+        android:layout_marginTop="22dp"
+        android:layout_alignEnd="@+id/button6" />
 
     <Button
         android:layout_width="wrap_content"
@@ -115,4 +116,5 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/textView"
         android:onClick="next_previous_button_pressed"/>
+
 </RelativeLayout>
