--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -117,4 +117,15 @@
         android:layout_toStartOf="@+id/textView"
         android:onClick="next_previous_button_pressed"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="1"
+        android:id="@+id/number"
+        android:layout_marginTop="63dp"
+        android:textSize="100dp"
+        android:layout_below="@+id/next_number"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
