In the middle of adding dart_percent_list. Need to work on some architecting of how I want to do this. I shall sleep on it.

--- a/app/src/main/res/layout/activity_solitaire.xml
+++ b/app/src/main/res/layout/activity_solitaire.xml
@@ -197,6 +197,37 @@
         android:id="@+id/textView4"
         android:layout_toStartOf="@+id/button4"
         android:layout_below="@+id/button3"
-        android:layout_toEndOf="@+id/button3" />
+        android:layout_toEndOf="@+id/button3"
+        android:textColor="#ffffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/dart_1_percent"
+        android:layout_alignTop="@+id/button4"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/dart_2_percent"
+        android:layout_alignTop="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/dart_3_percent"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/button3"
+        android:textColor="#ffffffff" />
 
 </RelativeLayout>
